core/static/css/v2/pages/home/home-page.less
/* ... */
.home-article-grid-3 {
  margin-bottom: 60px;
  .large {
    a {
      img {
        width: 100% !important;
        margin: 0 auto;
      }
    }
  }
  .category-image-overlay-text{
    position: absolute;
    top: 44%;
    margin: 0;
    width: 100%;
    font-size: 24px;
    line-height: 1.1;
    font-family: 'Amiri',serif;
    font-weight: 700;
    text-transform: capitalize;
  }
  .grid {
    padding: 10px;
    &.share {
      h1 {
        min-height: 265px;
      }
    }
    .desc-para {
      line-height: 15px;
      margin-top: 0px;
    }
    .fa {
      padding-top: 8px;
    }
    .all-categ-head {
      padding-bottom: 50px;
      margin-top: 0px;
    }
    h4 {
      .font-size(30);
      color: @text-title-light;
      font-weight: 300;
    }
    h1.subtitle {
      font-weight: 300;
    }
    .subtitle {
      .font-size(58);
      margin: 0;
      color: @text-title-light;
      font-weight: 300;
    }
    .mid-below-link {
      padding: 15px 0;

      a {
        color: @darker-grey;
      }
    }
    .mid-link {
      border-top: 1px solid @grey;
      border-bottom: 1px solid @grey;
      padding: 15px 0;
      a {
        color: @darker-grey;
      }
    }
    h6 {
      color: @grey;
    }
    p {
      color: @text-title-light;
    }
    a {
      color: @grey;
      &:hover {
        color: @link-primary;
      }
    }
  }
}

.faces-tile-1 {
  img {
    width: 100%
  }
  margin-bottom: 30px;
  position: relative;
  .faces-container {
    position: absolute;
    top: 0;
    padding-top: 40px;
    .row {
      margin-bottom: 80px;
    }
    h2 {
      color: @text-light;
      border-right: 1px solid @border-light;
      padding: 20px 0px;
    }
    button {
      color: @text-light;
      background: @bg-lighter-transparent;
      border: 1px solid @border-light;
      margin: 40px 0px 0px;
    }
    p {
      color: @grey;
      margin: 7px 0;
      a {
        color: @grey;
        &:hover {
          color: @primary-color;
        }
      }
    }
    .faces-overlay-text{
      font-size: 30px;
      border-right: solid 1px;
      margin-top: 20px;
      margin-bottom: 10px;
      display: block;
      /* font-weight: 700; */
      /* align-items: center; */
      text-align: right;
      color: #FFF;
      padding: 20px 20px;
      line-height: 1.1;
    }
  }
}

@media (max-width: @screen-xs-max) {
  .navbar-header {
    position: relative;
    .header-title-wrapper {
      display: inline-block;
      position: absolute;
      left: 0;
      right: 0;
      top: 0;
      bottom: 0;
      margin: auto;
      height: 32px;
      text-align: center;
    }
  }



  .home-article-grid-3 .grid.share h1 {
    min-height: auto;
  }

  .home-article-grid-1 {
    margin-bottom: 20px;
  }

  #myCarousel-2 {
    margin-bottom: 20px;
  }

  #myCarousel-1 {
    margin-bottom: 20px;
    .item {

      .floating-container .relative-container .floating-content {
        .link-to-page {
            padding: 10px;

            a {
              .font-size(18);
            }
        }
        h1, .featured-content-title {
          padding: 15px 0;
        }
       &.item-container {
         margin: 0 auto;
         h1, h4 {
           padding: 15px 0px;
         }
       }
      }
    }

    .floating-carousel-buttons {
      .carousel-buttons-wrapper {
        margin: auto;
      }
    }
  }

  .faces-tile-1 {
    margin-bottom: 0px;
    .faces-container {
      position: static;
      width: 100%;
      padding: 10px;
      .row {
        margin-bottom: 0px;
      }
      h2 {
        color: @text-dark;
        border-right: none;
        padding: 0;
        margin: 0;
      }
      button {
        color: @text-dark;
        background: @bg-lighter-transparent;
        border: 1px solid @border-dark;
        margin: 20px 0;
      }
      p {
        color: @grey;
        a {
          color: @grey;
          &:hover {
            color: @primary-color;
          }
        }
      }
    }
  }

  #mainnav .navbar-header .navbar-brand-title {
    display: block;
    margin: 4px;
    color: @dark-grey;
    font-size: 3.3vw;
    line-height: 1.5vw;
  }

  .home-page #mainnav .navbar-header .navbar-brand-sub-title {
    display: block !important;
    font-size: 1.4vw;
  }

  .home-page #mainnav .navbar-header .navbar-brand {
    position: relative;
    float: left;
  }

  #mainnav .navbar-header .navbar-brand img {
    width: 57px;
    left: 0px;
    position: absolute;
    margin-left: 13px;
  }

}

.red-angle-right {
  color: @primary-color !important;
  padding-left: 5px;
  font-weight: 700;
}

.pari-doing-block {
  border-top: 1px solid @border-dark;
  margin-top: 30px;
  padding-top: 40px;
  .pari-do-link {
    padding-bottom: 10px;
  }
  a {
    text-decoration: none;
    color: @dark-grey;
    letter-spacing: 1px;
    font-size: 1.5em;
    &:hover {
      cursor: pointer;
      color: @primary-color;
    }
  }
  .question-heading{
    font-size: 36px;
    color: @primary-color;
    font-family: 'Amiri',serif;
    font-weight: 700;
    margin-bottom: 20px;
  }
}

@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
  .faces-tile-1 {
    margin-bottom: 0px;
    .faces-container {
      position: static;
      width: 91%;
      padding: 0;

      .row {
        margin-bottom: 0px;
      }
      h2 {
        color: @text-dark;
        border-right: none;
        padding: 0;
        margin: 0;
      }
      button {
        color: @text-dark;
        background: @bg-lighter-transparent;
        border: 1px solid @border-dark;
        margin: 20px 0;
      }
      p {
        color: @grey;
        a {
          color: @grey;
          &:hover {
            color: @primary-color;
          }
        }
      }
    }
  }
}
/* ... */

